[package]
name = "herond"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "herond"
path = "src/main.rs"

[dependencies]
heron-event = { workspace = true }
heron-event-http = { workspace = true }
heron-orchestrator = { workspace = true }
heron-session = { workspace = true }
heron-types = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
# Cross-crate v2 integration tests in `tests/v2_lifecycle.rs` and
# `tests/v2_bridge_health.rs` exercise the bridge → daemon doctor.warning
# contract. Bridge isn't a runtime dep (the daemon doesn't yet own a
# bridge instance — that lands with the orchestrator-composition PR);
# pulled in here at test scope so the contract is pinned today.
heron-bridge = { workspace = true }
# Real-pipeline nightly test (`tests/clio_full_pipeline.rs`) drives the
# heron-cli session orchestrator with `skip_audio_capture: true` and a
# pre-seeded WAV fixture so the STT → LLM → vault path runs end-to-end
# against the real WhisperKit model + real Anthropic API. Gated behind
# the `real-pipeline` feature so the dep is only pulled into test
# builds that actually exercise it.
heron-cli = { workspace = true }
heron-llm = { workspace = true }
heron-speech = { workspace = true }
heron-vault = { workspace = true }
heron-types = { workspace = true }
heron-zoom = { workspace = true }
hound = { workspace = true }
serde_yaml = { workspace = true }
tempfile = "3"

[features]
# Opt-in gate for the nightly real-pipeline test set. Off by default so
# `cargo test --workspace` on a contributor's machine never reaches for
# downloaded STT models or paid LLM API keys. The `nightly.yml`
# workflow is the canonical caller; see issue #194.
real-pipeline = []

[lints]
workspace = true
