[package]
name = "heron-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
name = "heron_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "heron-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = "5"
heron-types = { workspace = true }
# `heron_status::audio_available` calls `heron_audio::audio_capture_available()`
# to derive the field from a real capability probe (cpal default input
# device + cfg-gated cidre process tap symbols) instead of the v0
# hardcode. The probe is sub-millisecond on macOS and returns `false`
# unconditionally off-Apple — see `crates/heron-audio/src/lib.rs`.
#
# Onboarding probes (`onboarding.rs`) reuse `heron-audio` plus call into
# `heron-zoom`, `heron-vault`, and `heron-speech` to exercise the real
# mic / system-audio / Accessibility / Calendar / WhisperKit-model
# paths instead of returning hardcoded `Skipped`.
heron-audio = { workspace = true }
heron-zoom = { workspace = true }
heron-vault = { workspace = true }
# Probes that hit TCC (mic, calendar) need `spawn_blocking`, and the
# tap probe is async — pull `tokio` in for the shared runtime. The
# `rt` + `time` features are the minimum the probes need (timeout +
# blocking pool); the desktop binary itself runs on Tauri's own loop.
tokio = { workspace = true }
# Calendar probe builds a `[start, end)` window via `chrono` and
# threads it through `heron_vault::calendar::calendar_read_one_shot`.
chrono = { workspace = true }
# Native file/directory picker for the Settings pane vault-path field
# (§16.1). The frontend calls `@tauri-apps/plugin-dialog::open({ directory:
# true })`, which routes to this plugin's IPC handler. Pinned to the
# matching JS package version on the renderer side.
tauri-plugin-dialog = "2.7.0"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[lints]
workspace = true
