[package]
name = "heron-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
name = "heron_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "heron-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` enables the `tauri::tray::*` API used by phase 64's
# menubar tray; `image-png` lets `tauri::image::Image::from_bytes`
# decode the PNG files in `icons/tray/` (without the feature, the
# decoder is compiled out and `from_bytes` returns a runtime error).
# `protocol-asset` enables the built-in `asset:` protocol the ┬¦15.3
# Review playback bar uses to stream the recorded m4a/wav from disk
# into the webview's <audio> element via `convertFileSrc()` ŌĆö without
# the feature, `assetProtocol.enable: true` in `tauri.conf.json` is
# rejected at build time.
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = "5"
heron-types = { workspace = true }
# `heron_status::audio_available` calls `heron_audio::audio_capture_available()`
# to derive the field from a real capability probe (cpal default input
# device + cfg-gated cidre process tap symbols) instead of the v0
# hardcode. The probe is sub-millisecond on macOS and returns `false`
# unconditionally off-Apple ŌĆö see `crates/heron-audio/src/lib.rs`.
#
# Onboarding probes (`onboarding.rs`) reuse `heron-audio` plus call into
# `heron-zoom`, `heron-vault`, and `heron-speech` to exercise the real
# mic / system-audio / Accessibility / Calendar / WhisperKit-model
# paths instead of returning hardcoded `Skipped`.
heron-audio = { workspace = true }
heron-zoom = { workspace = true }
heron-vault = { workspace = true }
# Phase 67 (PR-╬Ą): the Re-summarize button in the Review UI calls
# `heron_cli::summarize::re_summarize_in_vault`, which threads the
# ┬¦10.5 ID-preservation contract + ┬¦10.3 merge through
# `heron_vault::VaultWriter::re_summarize`. Pulling in `heron-llm`
# alongside lets the Tauri command resolve a live `Summarizer` via
# `select_summarizer(Preference::Auto)`.
heron-cli = { workspace = true }
heron-llm = { workspace = true }
# Probes that hit TCC (mic, calendar) need `spawn_blocking`, and the
# tap probe is async ŌĆö pull `tokio` in for the shared runtime. The
# `rt` + `time` features are the minimum the probes need (timeout +
# blocking pool); the desktop binary itself runs on Tauri's own loop.
tokio = { workspace = true }
# Calendar probe builds a `[start, end)` window via `chrono` and
# threads it through `heron_vault::calendar::calendar_read_one_shot`.
chrono = { workspace = true }
# Native file/directory picker for the Settings pane vault-path field
# (┬¦16.1). The frontend calls `@tauri-apps/plugin-dialog::open({ directory:
# true })`, which routes to this plugin's IPC handler. Pinned to the
# matching JS package version on the renderer side.
tauri-plugin-dialog = "2.7.0"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

# macOS Keychain integration (PR-╬Ė / phase 70). The crate is broadly
# used (rustls, reqwest, cargo) and dual-licensed MIT/Apache-2.0 (already
# in `deny.toml`'s allowlist via the existing transitive dep on it). The
# `cfg(target_os = "macos")` gate keeps Linux/Windows builds clean ŌĆö the
# `keychain` module ships a stub for those platforms.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[features]
# Opt-in flag for tests that hit the real macOS login keychain. Off by
# default so CI (where the login keychain is locked) and routine
# developer test runs don't spawn keychain unlock prompts. Enable with
# `cargo test -p heron-desktop --features test_real_keychain`.
default = []
test_real_keychain = []

[lints]
workspace = true
